@@ -6,5 +6,13 @@
         android:icon="@drawable/multi"
         android:showAsAction="always"
         android:title="@string/selectall"/>
+    <item
+        android:id="@+id/shortcut"
+        android:showAsAction="never"
+        android:title="@string/shortcut"/>
+    <item
+        android:id="@+id/deleteapps"
+        android:showAsAction="never"
+        android:title="@string/deleteapps"/>
 
 </menu>
