@@ -1,6 +1,9 @@
 Changelog:
 v1.7.3	added default directory option
 		added forumlink in preferences
+		speed up image preview loading
+		AppManager:	delete saved apps
+					create shortcut on home
 		improved search
 		improved layout for xhdpi devices
 v1.7.2	Bug Fixes (new folder, rename folder, move/copy)
